uf_ulog_macro/tests/ui/fail_registry_generics.stderr
error: ULogRegistry does not support enums with generics
 --> tests/ui/fail_registry_generics.rs:2:12
  |
2 | enum Topics<T> {
  |            ^^^
