uf_ulog_macro/tests/ui/fail_registry_generics.rs
#[derive(uf_ulog_macro::ULogRegistry)]
enum Topics<T> {
    Gyro,
    _Marker(T),
}

fn main() {}
